--- a/slides/index.html
+++ b/slides/index.html
@@ -2,6 +2,25 @@
   ザキ研紹介2018
 </h2>
 <h3 class="center">
-  北九州市立大学 山崎 進
+  <span class="heading">北九州市立大学 山崎 進</span><img class="heading" src="resources/images/ZACKY-3000.jpg" />
 </h3>
-<img class="icon" src="resources/images/ZACKY-3000.jpg" />
+<h3 class="left">
+  テーマとキーワード一覧
+</h3>
+<ol>
+  <li>
+    <span class="nonsplit">【アプリ開発，文系的な活動】</span><span class="nonsplit strong">地域課題を解決するアプリ開発・デザイン</span>
+  </li>
+  <li>
+    <span class="nonsplit">【プログラミング】</span><span class="nonsplit strong">プログラミング言語処理系の研究・開発</span>
+  </li>
+  <li>
+    <span class="nonsplit">【プログラミング】</span><span class="nonsplit strong">オープンソースソフトウェアの開発</span>
+  </li>
+  <li>
+    <span class="nonsplit">【AI】</span><span class="nonsplit strong">AI技術の社会実装</span>
+  </li>
+  <li>
+    <span class="nonsplit">【教育】</span><span class="nonsplit strong">若者の潜在能力を最大限引き出す教育</span>
+  </li>
+</ol>
