--- a/slides/index-1.html
+++ b/slides/index-1.html
@@ -1,10 +1,7 @@
 <h2 class="center">
-  ザキ研紹介2018
+  <span class="heading">ザキ研紹介2018</span><img class="heading" src="resources/images/ZACKY-3000.jpg" />
 </h2>
 <h3 class="center">
-  <span class="heading">北九州市立大学 山崎 進</span><img class="heading" src="resources/images/ZACKY-3000.jpg" />
-</h3>
-<h3 class="left">
   テーマとキーワード一覧
 </h3>
 <ol>
