--- a/slides/index-2.html
+++ b/slides/index-2.html
@@ -27,6 +27,9 @@
     <span class="nonsplit strong">バンドが楽しい</span>
   </li>
   <li>
+    <span class="nonsplit strong">創作活動が楽しい</span>
+  </li>
+  <li>
     <span class="nonsplit strong">地域の役に立ちたい  </span>
   </li>
   <li>
