--- a/slides/index-3.html
+++ b/slides/index-3.html
@@ -2,7 +2,7 @@
   <span class="heading">ザキ研紹介2018</span><img class="heading" src="resources/images/ZACKY-3000.jpg" />
 </h2>
 <h3 class="center">
-  テーマとキーワード一覧
+  テーマとキーワード
 </h3>
 <ol>
   <li>
