create for programmer

--- a/slides/for-programmer-1.html
+++ b/slides/for-programmer-1.html
@@ -1,36 +1,29 @@
 <h2>
-  プログラマ志望のみなさんへ
+  プログラマ志望のみなさんへ 
 </h2>
+<h3>
+  育てたいプログラマ像〜多能工プログラマ 
+</h3>
 <ul>
   <li>
-    <span>世の中にはいろんなプログラミング言語がある:&nbsp;</span><span class="nonsplit">Ruby, Python, Swift, C#, ...</span>
+    フルスタックエンジニアと近い，けどもっと守備範囲が広いイメージ 
+  </li>
+  <li class="strong">
+    ザキ研マインドを持つプログラマ 
+  </li>
+  <li class="strong">
+    役割の枠を超える，業界の枠を超える，知識の枠を超える 
   </li>
   <li>
-    <span>もし</span><span class="strong">「究極言語」</span><span>があるとしたら，習得してみたいと思わない？</span>
+    「わかんないよーといいながら，ずかずかと未開の地に分けいっちゃうプログラマ」 
+  </li>
+  <li class="strong">
+    プログラミングを主な活動にする 
   </li>
   <li>
-    <span>それが</span><span class="strong">Elixir(エリクサー)</span><span>だ！</span>
-    <ul>
-      <li>
-        不老不死の霊薬に由来。ファイナルファンタジーでおなじみの名前ですね
-      </li>
-    </ul>
+    <span class="strong">× &nbsp; </span><span>設計だけして実装を丸投げするようなエンジニア</span>
   </li>
-  <li>
-    <span>Elixirの特徴はこうだ！</span>
-    <ul>
-      <li class="strong">
-        超ハイパフォーマンスで高い生産性
-      </li>
-      <li class="strong">
-        ウェブ環境 Phoenix で爆速ウェブサイトが作れる
-      </li>
-      <li class="strong">
-        これからザキ研でシステムプログラミング応用を研究するぞ！
-      </li>
-    </ul>
-  </li>
-  <li>
-    <span>詳しく話を聞きたい人は</span><span class="strong">ザキ研ブースへGo! </span>
+  <li class="strong">
+    プログラミングを通して問題を解決することを仕事にする 
   </li>
 </ul>
