--- a/slides/for-programmer-2.html
+++ b/slides/for-programmer-2.html
@@ -6,7 +6,7 @@
 </h3>
 <ul>
   <li>
-    <span class="strong">アプリを作ってみたい！:&nbsp;</span><span class="nonsplit">モバイル，ウェブ，ゲーム，VR/AR, AI, ...</span>
+    <span class="strong">アプリを作ってみたい！:&nbsp;</span><span class="nonsplit">モバイル，ウェブ，ゲーム，VR/AR，AI，メディアアート，音楽...</span>
   </li>
   <li>
     <span>ザキ研では次のようなアプリ開発をしています！</span>
