update & add for programmer

--- a/slides/for-programmer-2.html
+++ b/slides/for-programmer-2.html
@@ -1,36 +1,26 @@
 <h2>
-  プログラマ志望のみなさんへ
+  プログラマ志望のみなさんへ 
 </h2>
 <h3>
-  アプリを開発したいみなさんへ
+  育てたいプログラマ像〜起業家マインドを持つエンジニア 
 </h3>
 <ul>
-  <li>
-    <span class="strong">アプリを作ってみたい！:&nbsp;</span><span class="nonsplit">モバイル，ウェブ，ゲーム，VR/AR，AI，メディアアート，音楽...</span>
+  <li class="strong">
+    プログラミングを通して問題を解決することを仕事にする
   </li>
   <li>
-    <span>ザキ研では次のようなアプリ開発をしています！</span>
-    <ul>
-      <li>
-        <span class="strong">地域課題の解決につながるアプリ&nbsp;</span><a href="https://zacky1972.github.io/KK-SHiFT/">KK-SHiFT</a>
-      </li>
-      <li class="strong">
-        主に県内企業等からの依頼による受託開発
-      </li>
-      <ul>
-        <li class="strong">
-          共同研究型インターンシップ
-        </li>
-        <li>
-          インターンシップ + アルバイト + 共同研究
-        </li>
-      </ul>
-      <li class="strong">
-        就職活動に強い！ IT企業に強い！ 地元就職に強い！
-      </li>
-    </ul>
+    <span>そのためにはプログラミングだけでなく</span><span class="strong">社会のことを知ることも大事</span>
+  </li>
+  <li class="strong">
+    ザキ研マインドを持つプログラマ 
+  </li>
+  <li class="strong">
+    役割の枠を超える，業界の枠を超える，知識の枠を超える 
+  </li>
+  <li class="strong">
+    起業家のようにチャレンジングであり，リスクを判断する
+  </li>
+  <li>
+    <span>ザキ研で</span><span class="strong">リスクを安全に学ぼう！</span>
   </li>
 </ul>
-<p>
-  <span class="nonsplit"><img class="icon" src="resources/images/Petlian-icon.png" /><img class="icon" src="resources/images/KamoKamo-icon.png" /><img class="icon" src="resources/images/agri-IoT-icon.png" /><img class="icon" src="resources/images/KanmonGG-icon.jpg" /><img class="icon" src="resources/images/Gakufubako-icon.jpg" /></span>
-</p>
