--- a/slides/for-programmer-3.html
+++ b/slides/for-programmer-3.html
@@ -1,44 +1,36 @@
 <h2>
-  <span class="heading">プログラマ志望のみなさんへ &nbsp;</span><img class="heading" src="resources/images/Official_Elixir_logo.png" />
+  プログラマ志望のみなさんへ
 </h2>
+<h3>
+  アプリを開発したいみなさんへ
+</h3>
 <ul>
   <li>
-    <span>世の中にはいろんなプログラミング言語がある:&nbsp;</span><span class="nonsplit">Ruby, Python, Swift, C#, ...</span>
+    <span class="strong">アプリを作ってみたい！:&nbsp;</span><span class="nonsplit">モバイル，ウェブ，ゲーム，VR/AR，AI，メディアアート，音楽...</span>
   </li>
   <li>
-    <span>もし</span><span class="strong">「究極言語」</span><span>があるとしたら，習得してみたいと思わない？</span>
-  </li>
-  <li>
-    <span>それが</span><span class="strong">Elixir(エリクサー)</span><span>だ！</span>
+    <span>ザキ研では次のようなアプリ開発をしています！</span>
     <ul>
       <li>
-        不老不死の霊薬に由来。ファイナルファンタジーでおなじみの名前
+        <span class="strong">地域課題の解決につながるアプリ&nbsp;</span><a href="https://zacky1972.github.io/KK-SHiFT/">KK-SHiFT</a>
       </li>
-    </ul>
-  </li>
-  <li>
-    <span>Elixirの特徴はこうだ！</span>
-    <ul>
       <li class="strong">
-        超ハイパフォーマンス
+        主に県内企業等からの依頼による受託開発
       </li>
       <ul>
-        <li>
-          複数のCPUを使い倒す！
+        <li class="strong">
+          共同研究型インターンシップ
         </li>
         <li>
-          一緒に処理系を作って，GPUやFPGAを駆動してみないか？
+          インターンシップ + アルバイト + 共同研究
         </li>
       </ul>
       <li class="strong">
-        高いレスポンス性能
-      </li>
-      <li class="strong">
-        高い生産性
-      </li>
-      <li class="strong">
-        → ウェブサイト構築ソフト Phoenix で爆速ウェブサイトを爆速で作る！
+        就職活動に強い！ IT企業に強い！ 地元就職に強い！
       </li>
     </ul>
   </li>
 </ul>
+<p>
+  <span class="nonsplit"><img class="icon" src="resources/images/Petlian-icon.png" /><img class="icon" src="resources/images/KamoKamo-icon.png" /><img class="icon" src="resources/images/agri-IoT-icon.png" /><img class="icon" src="resources/images/KanmonGG-icon.jpg" /><img class="icon" src="resources/images/Gakufubako-icon.jpg" /></span>
+</p>
