--- a/slides/for-programmer-4.html
+++ b/slides/for-programmer-4.html
@@ -1,44 +1,44 @@
 <h2>
-  プログラマ志望のみなさんへ 
+  <span class="heading">プログラマ志望のみなさんへ &nbsp;</span><img class="heading" src="resources/images/Official_Elixir_logo.png" />
 </h2>
-<h3>
-  入門にあたっての課題 
-</h3>
 <ul>
   <li>
-    もちろんプログラミングできる必要があります
+    <span>世の中にはいろんなプログラミング言語がある:&nbsp;</span><span class="nonsplit">Ruby, Python, Swift, C#, ...</span>
   </li>
   <li>
-    大事なこと
+    <span>もし</span><span class="strong">「究極言語」</span><span>があるとしたら，習得してみたいと思わない？</span>
   </li>
-  <ul>
-    <li>
-      <span class="strong">なぜそのようにプログラミングしたのか，</span><span>説明できること</span>
-    </li>
-    <li class="strong">
-      向上心
-    </li>
-  </ul>
   <li>
-    次の課題を用意しました。少なくとも1つ取り組んで提出してください
-  </li>
-  <ol>
-    <li>
-      今までに開発したプログラムを提出してください
-    </li>
+    <span>それが</span><span class="strong">Elixir(エリクサー)</span><span>だ！</span>
     <ul>
       <li>
-        自作のものでもプログラミング演習でもOK
-      </li>
-      <li>
-        意図を説明するドキュメント・コメントも書いてください
+        不老不死の霊薬に由来。ファイナルファンタジーでおなじみの名前
       </li>
     </ul>
-    <li>
-      別途指定する専門書を借りて読み，感想・疑問等を述べてください。
-    </li>
-    <li>
-      <span class="nonsplit"><a href="https://elixirschool.com/ja/">Elixir School</a><span>にしたがって，Elixir のプログラムを書いてください。</span></span><span class="nonsplit">その後，簡単なものでいいので何かプログラムを自作してください。</span>
-    </li>
-  </ol>
+  </li>
+  <li>
+    <span>Elixirの特徴はこうだ！</span>
+    <ul>
+      <li class="strong">
+        超ハイパフォーマンス
+      </li>
+      <ul>
+        <li>
+          複数のCPUをたやすく使い倒す！
+        </li>
+        <li>
+          一緒に処理系を作って，GPUやFPGAを駆動してみないか？
+        </li>
+      </ul>
+      <li class="strong">
+        高いレスポンス性能
+      </li>
+      <li class="strong">
+        高い生産性
+      </li>
+      <li class="strong">
+        → ウェブサイト構築ソフト Phoenix で爆速ウェブサイトを爆速で作る！
+      </li>
+    </ul>
+  </li>
 </ul>
