add link to for programmer

--- a/slides/index-2.html
+++ b/slides/index-2.html
@@ -6,7 +6,7 @@
 </h3>
 <ol>
   <li>
-    <span class="nonsplit strong">プログラマ志望</span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/4">プログラマ志望</a></span>
   </li>
   <li>
     <span class="nonsplit strong">デザイナー志望</span>
