create & add for designer

--- a/slides/for-designer-1.html
+++ b/slides/for-designer-1.html
@@ -14,4 +14,21 @@
   <li class="strong">
     顧客に「それ欲しかったんだよね！」と言わせたい！
   </li>
+  <li>
+    大事な道具立て
+  </li>
+  <ul>
+    <li>
+      <span class="strong">観察とインタビュー</span><span>〜顧客に向かい合い，問題を発見する</span>
+    </li>
+    <li>
+      <span class="strong">情報デザイン</span><span>〜情報を整理して見やすくわかりやすくする</span>
+    </li>
+    <li>
+      <span class="strong">ユーザビリティ評価</span><span>〜わかりやすいか，使い勝手が良いか，評価する</span>
+    </li>
+  </ul>
+  <li>
+    <span>これらができた上で，美しく見た目を整えると効果的</span>
+  </li>
 </ul>
