update for programmer to add software engineering automation

--- a/slides/for-programmer-5.html
+++ b/slides/for-programmer-5.html
@@ -2,43 +2,30 @@
   プログラマ志望のみなさんへ 
 </h2>
 <h3>
-  入門にあたっての課題 
+  ソフトウェア開発を支援するソフトウェア
 </h3>
 <ul>
   <li>
-    もちろんプログラミングできる必要があります
+    アプリを開発するだけが問題解決ではない
+  </li>
+  <li class="strong">
+    アプリを効率良く開発できるようにすることも問題解決の1つ
   </li>
   <li>
-    大事なこと
+    たとえばこんな研究事例がある
   </li>
   <ul>
-    <li>
-      <span class="strong">なぜそのようにプログラミングしたのか，</span><span>説明できること</span>
+    <li class="strong">
+      コラボレーションを円滑にする bot(ボット)
     </li>
     <li class="strong">
-      向上心
+      AIでプログラムコードの問題点を指摘
+    </li>
+    <li class="strong">
+      ソフトウェア開発工程の自動化
     </li>
   </ul>
   <li>
-    次の課題を用意しました。少なくとも1つ取り組んで提出してください
+    <span>このような支援により</span><span class="strong">ソフトウェア開発の効率が劇的に向上する</span>
   </li>
-  <ol>
-    <li>
-      今までに開発したプログラムを提出してください
-    </li>
-    <ul>
-      <li>
-        自作のものでもプログラミング演習でもOK
-      </li>
-      <li>
-        意図を説明するドキュメント・コメントも書いてください
-      </li>
-    </ul>
-    <li>
-      別途指定する専門書を借りて読み，感想・疑問等を述べてください。
-    </li>
-    <li>
-      <span class="nonsplit"><a href="https://elixirschool.com/ja/">Elixir School</a><span>にしたがって，Elixir のプログラムを書いてください。</span></span><span class="nonsplit">（詳しくは別途教えますよ〜）</span><span class="nonsplit">その後，簡単なものでいいので何かプログラムを自作してください。</span>
-    </li>
-  </ol>
 </ul>
