--- a/slides/for-programmer-6.html
+++ b/slides/for-programmer-6.html
@@ -35,10 +35,10 @@
       </li>
     </ul>
     <li>
-      別途指定する専門書を借りて読み，感想・疑問等を述べてください。
+      別途指定する専門書を借りて読み，感想・疑問等を述べてください
     </li>
     <li>
-      <span class="nonsplit"><a href="https://elixirschool.com/ja/">Elixir School</a><span>にしたがって，Elixir のプログラムを書いてください。</span></span><span class="nonsplit">（詳しくは別途教えますよ〜）</span><span class="nonsplit">その後，簡単なものでいいので何かプログラムを自作してください。</span>
+      <span class="nonsplit">チュートリアル・入門書に沿って Elixir のプログラムを書いてください</span><span class="nonsplit">（詳しくは別途教えますよ〜）</span><span class="nonsplit">その後，簡単なものでいいので何かプログラムを自作してください</span>
     </li>
   </ol>
 </ul>
