update for designer to change description to making concept

--- a/slides/for-designer-1.html
+++ b/slides/for-designer-1.html
@@ -8,8 +8,8 @@
   <li>
     デザイナーの仕事は見た目を整えるだけじゃない！
   </li>
-  <li class="strong">
-    顧客の問題を解決することがデザイナーの仕事だ
+  <li>
+    <span>顧客がばくぜんと思い描く</span><span class="strong">コンセプトを形にすることがデザイナーの仕事</span>
   </li>
   <li class="strong">
     顧客に「それ欲しかったんだよね！」と言わせたい！
