--- a/slides/index-2.html
+++ b/slides/index-2.html
@@ -12,7 +12,7 @@
     <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/10">デザイナー志望</a></span>
   </li>
   <li>
-    <span class="nonsplit strong">起業家志望</span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/15">起業家志望</a></span>
   </li>
   <li>
     <span class="nonsplit strong">教師志望</span>
