--- a/slides/index-2.html
+++ b/slides/index-2.html
@@ -18,13 +18,13 @@
     <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/18">教育に興味がある</a></span>
   </li>
   <li>
-    <span class="nonsplit strong">ゲームが好きだけど後ろめたく思う</span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/19">ゲームが好きだけど後ろめたく思う</a></span>
   </li>
   <li>
-    <span class="nonsplit strong">イベント企画・運営が楽しい</span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/23">イベント企画・運営が楽しい</a></span>
   </li>
   <li>
-    <span class="nonsplit strong">バンドが楽しい</span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/25">バンドが楽しい</a></span>
   </li>
   <li>
     <span class="nonsplit strong">創作活動が楽しい</span>
