--- a/slides/index-2.html
+++ b/slides/index-2.html
@@ -27,13 +27,13 @@
     <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/25">バンドが楽しい</a></span>
   </li>
   <li>
-    <span class="nonsplit strong">創作活動が楽しい</span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/27">創作活動が楽しい</a></span>
   </li>
   <li>
-    <span class="nonsplit strong">地域の役に立ちたい  </span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/28">地域の役に立ちたい  </a></span>
   </li>
   <li>
-    <span class="nonsplit strong">自分の未来に希望を持てない</span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/29">自分の未来に希望を持てない</a></span>
   </li>
   <li>
     <span class="nonsplit strong">やりたいことが見つからない</span>
