add link to for students

--- a/slides/index-2.html
+++ b/slides/index-2.html
@@ -36,6 +36,6 @@
     <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/29">自分の未来に希望を持てない</a></span>
   </li>
   <li>
-    <span class="nonsplit strong">やりたいことが見つからない</span>
+    <span class="nonsplit strong"><a href="https://zackylab.github.io/research-introduction-2018/#/31">やりたいことが見つからない</a></span>
   </li>
 </ol>
