update for designer

--- a/slides/for-designer-4.html
+++ b/slides/for-designer-4.html
@@ -11,4 +11,10 @@
   <li>
     デザインの仕事をしながら学べる環境に身を置けます
   </li>
+  <li>
+    デザインだけでなくマーケティングやデータの扱い方などを学ぶことができます
+  </li>
+  <li>
+    <span class="nonsplit">どんなデザイナーになると良いのかアドバイスをもらえます</span><span class="nonsplit">（先輩の例：やさしいデザイナー）</span>
+  </li>
 </ul>
