--- a/slides/for-designer-5.html
+++ b/slides/for-designer-5.html
@@ -10,23 +10,35 @@
   </li>
   <ul>
     <li>
+      <span>自分がやりたいことではなく，</span><span class="strong">お客様がどうなれば幸せになるのか</span><span>を考えること</span>
+    </li>
+    <li>
       <span class="strong">なぜそのようにデザインしたのか，</span><span>説明できること</span>
+      <li>
+        トライアンドエラーを繰り返し，経験を積み上げ進化していくこと
+      </li>
     </li>
   </ul>
   <li>
     次の課題を用意しました
   </li>
-  <ol>
+  <ul>
     <li>
-      作品を提出し，デザイン意図をプレゼンテーションしてください
+      <span class="nonsplit">作品を提出してください</span><span class="nonsplit">作品は絵でもウェブページでもアプリ構想でも何でもOK</span>
+    </li>
+    <li>
+      <span class="nonsplit">次の点をプレゼンテーションしてください</span><span class="nonsplit">プレゼンテーションは口頭でも別途スライドを作ってもOK</span>
     </li>
     <ul>
       <li>
-        作品は絵でもウェブページでもアプリ構想でも何でもOK
+        誰のためのデザインで，その人がどう幸せになるのか
+      </li>
+      <li>
+        なぜそのようにデザインしたのか
+      </li>
+      <li>
+        どのような試行錯誤をしたのか
       </li>
     </ul>
-    <li>
-      プレゼンテーションは口頭でも別途スライドを作ってもOK
-    </li>
-  </ol>
+  </ul>
 </ul>
